--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,31 +1,41 @@
 <footer>
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <a href="{{ site.BaseURL | relLangURL }}" class="mb-4 d-inline-block">{{ if site.Params.logo }} <img src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" {{with site.Params.logo_width}}width="{{.}}"{{end}}> {{ else }} {{ .Title }} {{ end }}</a>
-          <ul class="list-inline footer-menu">
-            {{ range site.Menus.footer }}
-            <li class="list-inline-item">
-              <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
-            </li>
-            {{ end }}
-          </ul>
-          <p class="copyright-text">{{ site.Params.copyright | markdownify }}</p>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <a href="{{ site.BaseURL | relLangURL }}" class="mb-4 d-inline-block">{{ if site.Params.logo }} <img
+                            src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" {{with
+                            site.Params.logo_width}}width="{{.}}" {{end}}> {{ else }} {{ .Title }} {{ end }}</a>
+                    <ul class="list-inline footer-menu">
+                        {{ range site.Menus.footer }}
+                        <li class="list-inline-item">
+                            <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+                        </li>
+                        {{ end }}
+                    </ul>
+                    <p class="copyright-text">{{ site.Params.copyright | markdownify }}</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </footer>
-
-
-<!-- Snipcart public key -->
-{{with site.Params.snipcart_api}}<div hidden id="snipcart" data-api-key="{{.}}"></div>{{end}}
 
 <!-- JS Plugins -->
 {{ range site.Params.plugins.js}}
 <script src="{{ .link | absURL }}"></script>
 {{ end }}
+
+<script>
+    function on_load() {
+        let key = "{{site.Params.livemart_key}}";
+        let secret = "{{site.Params.livemart_secret}}";
+        set_store_key(key);
+        set_store_secret(secret);
+        get_store_info();
+    }
+
+    on_load();
+</script>
 
 <!-- Main Script -->
 {{ $script := resources.Get "js/script.js" }}
