--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,30 +1,35 @@
 <head>
-  <meta charset="utf-8">
-  <title>{{ .Title }}</title>
+    <meta charset="utf-8">
+    <title>{{ .Title }}</title>
 
-  {{ "<!-- mobile responsive meta -->" | safeHTML }}
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
-  {{ with site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
-  {{ hugo.Generator }}
+    {{ "<!-- mobile responsive meta --> " | safeHTML }}
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description"
+          content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
+    {{ with site.Params.author }}
+    <meta name="author" content="{{ . }}">
+    {{ end }}
+    {{ hugo.Generator }}
 
-  {{ "<!-- plugins -->" | safeHTML }}
-  {{ range site.Params.plugins.css }}
-  <link rel="stylesheet" href="{{ .link | absURL }} ">
-  {{ end }}
+    {{ "<!-- plugins --> " | safeHTML }}
+    {{ range site.Params.plugins.css }}
+    <link rel="stylesheet" href="{{ .link | absURL }} ">
+    {{ end }}
 
-  {{ "<!-- Main Stylesheet -->" | safeHTML }}
-  {{ $styles := resources.Get "scss/style.scss" | toCSS | minify }}
-  <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
+    {{ "<!-- Main Stylesheet --> " | safeHTML }}
+    {{ $styles := resources.Get "scss/style.scss" | toCSS | minify }}
+    <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
-  {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
-  <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
+    {{ "<!--Favicon--> " | safeHTML }}
+    <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
+    <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
 
-  {{ with .Params.image }}
-  <meta property="og:image" content="{{ . | absURL }}" />
-  {{ end }}
-  {{ template "_internal/opengraph.html" . }}
-  {{ template "_internal/google_analytics_async.html" . }}
+    {{ with .Params.image }}
+    <meta property="og:image" content="{{ . | absURL }}"/>
+    {{ end }}
+    {{ template "_internal/opengraph.html" . }}
+    {{ template "_internal/google_analytics_async.html" . }}
 
+    <script async src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script async src="https://js.stripe.com/v3/"></script>
 </head>
