--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,6 +30,9 @@
     {{ template "_internal/opengraph.html" . }}
     {{ template "_internal/google_analytics_async.html" . }}
 
-    <script async src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script async src="https://js.stripe.com/v3/"></script>
+    <script src="https://cdn.jsdelivr.net/gh/livemart/livemart-checkout@v1.0.0/livemart_checkout.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/livemart/livemart-checkout@v1.0.0/style.css"/>
 </head>
